# QwQ

./: .gitignore  README.md
ai/: 3neural_network.py  example.py  five.py  four.py  sixxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.py  three.py
browser/: index.html
c/inf_cal_phy/0113/: main.c  out.txt  output.txt  test.c
c/szht_prg/: 5-1.c  Makefile
doc/: computer_science.md  english_vocabulary.md  mem.md  rakutan.md  report.md  tmp.rs  typo.md
html/: learn.html  style.css
internet/socket/: httpclient.py
lua/example/: main.lua  test.lua
ruby/: twenty.rb
rust/comment_ale_kore/src/: main.rs
rust/dec_macro/src/: main.rs
rust/elseeee/src/: main.rs
rust/gen_address/: Cargo.toml
rust/gen_address/src/: main.rs  vaild_mail.py
rust/gen_address/src/mail_list/: ida.duretto.txt  ikeda.yukiya.txt  iseda.tetsuji.txt  itou.atsushi.txt  iwasaki.naoko.txt
rust/rust_wasm_game/1_hello_wasm/walk_the_dog/: Cargo.toml
rust/rust_wasm_game/1_hello_wasm/walk_the_dog/src/: lib.rs
rust/rust_wasm_game/1_hello_wasm/walk_the_dog/static/: index.html
rust/rust_wasm_game/walk_the_dog/: Cargo.toml
rust/rust_wasm_game/walk_the_dog/src/: lib.rs
rust/she_bang/: Cargo.toml
rust/she_bang/src/: main.rs
rust/socket/src/: main.rs
swift/: learn.swift
swift/tspl/: 10property.swift  7closure.swift
