[package]
name = "she_bang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sugiura-hiromichi_mylibrary = "1"
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
