[package]
name = "she_bang"
version = "0.1.0"
edition = "2021"
default-run = "she_bang"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sugiura-hiromichi_mylibrary = "1"
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
numpy = "0"
pyo3 = { version = "0", features = ["auto-initialize"] }
